Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriBooleanRetTextObj.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, Text> yoda
        Text ret = yoda:useForce(one, two)
        output "passed"
     end
end
