Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriBooleanRetTextObjFail.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, Text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
